--- a/boramjul/etc/order.html
+++ b/boramjul/etc/order.html
@@ -5,7 +5,7 @@
     <title>index</title>
     <meta name="viewport" id="viewport" content="user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, width=device-width" />
     <link rel="stylesheet" href="../css/default.css">
-    <script src='jquery-3.2.1.min.js'></script>
+    <script src='../jquery-3.2.1.min.js'></script>
 </head>
 <body>
         <!-- container -->
