--- a/boramjul/etc/order.html
+++ b/boramjul/etc/order.html
@@ -4,187 +4,162 @@
     <meta charset="utf-8">
     <title>index</title>
     <meta name="viewport" id="viewport" content="user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, width=device-width" />
-    <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/order.css">
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 </head>
 <body>
         <!-- container -->
         <section id="container">
+            <div class="my_line">
+            </div>
             <div class="contents">
 
                 <section class="order">
-                    <h2>주문과정</h2>
-                    <div class="product_info">
-                        <table>
-                            <colgroup>
-                                <col style="width: 15%;">
-                                <col>
-                                <col style="width: 25%;">
-                                <col style="width: 15%;">
-                            </colgroup>
-                            <thead>
-                                <tr>
-                                    <th colspan="2">상품정보</th>
-                                    <th>판매가</th>
-                                    <th>배송/판매자</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td><img src="../images/img_book.jpg" alt=""></td>
-                                    <td>
-                                        <strong class="delivery">무료배송</strong>
-                                        <p>자바 웹을 다루는 기술 -  JSP,서블릿,스프링까지 <br>실무에서 알아야 할 기술은 따로 있다!</p>
-                                    </td>
-                                    <td class="price">45,000원 -> 40,500원<br>(실버등급10%)할인</td>
-                                    <td class="price">보람줄 배송</td>
-                                </tr>
-                            </tbody>
-                        </table>                        
+                    <div class="menu_name_box">
+                        <p class="menu_name">Order</p>
                     </div>
 
-                    <form action="">
-                        <div class="shipping_address">
-                            <h3>배송지 정보 입력 <strong>(*필수 입력 항목)</strong></h3>
-                            <table>
-                                <colgroup>
-                                    <col style="width: 15%;">
-                                    <col>
-                                </colgroup>
-                                <tbody>
-                                    <tr>
-                                        <th><strong>*</strong>주문인</th>
-                                        <td><input type="text" placeholder="이름" required></td>
-                                    </tr>
-                                    <tr>
-                                        <th><strong>*</strong>받으시는분</th>
-                                        <td><input type="text" placeholder="이름" required></td>
-                                    </tr>
-                                    <tr>
-                                        <th><strong>*</strong>주소</th>
-                                        <td>
-                                            <div class="search">
-                                                <input type="text" placeholder="" required>
-                                                <a href="#">주소검색</a><br>
-                                            </div>
-                                            <div class="add_01">
-                                                <input type="text" placeholder="" required style="width: 50%;">
-                                            </div>
-                                            <div class="add_02">
-                                                <input type="text" placeholder="" required style="width: 50%;">
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <th><strong>*</strong>휴대전화번호</th>
-                                        <td>
-                                            <input type="tel" placeholder="010" required> -
-                                            <input type="tel" placeholder="" required> -
-                                            <input type="tel" placeholder="" required>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <th><strong>*</strong>요청사항</th>
-                                        <td>
-                                            <div class="inner">
-                                                <div class="choice">
-                                                    <input type="radio" name="request" id="request_01" placeholder="" required>
-                                                    <label for="request_01">경비실</label>
-                                                </div>
-                                                <div class="choice">
-                                                    <input type="radio" name="request" id="request_02" placeholder="" required>
-                                                    <label for="request_02">문앞</label>
-                                                </div>
-                                                <div class="choice">
-                                                    <input type="radio" name="request" id="request_03" placeholder="" required>
-                                                    <label for="request_03">무인택배함</label>
-                                                </div>
-                                                <div class="choice">
-                                                    <input type="radio" name="request" id="request_04" placeholder="" required>
-                                                    <label for="request_04">직접수령</label>
-                                                </div>
-                                                <div class="choice">
-                                                    <input type="radio" name="request" id="request_05" placeholder="" required>
-                                                    <label for="request_05">기타</label>
-                                                    <input type="text" placeholder="" required>
-                                                </div>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>                        
-                        </div>
+                    <div class="order_list">
+                        <table>
+                            <tr style="height: 40px;">
+                                <td></td>
+                                <td>책 제목</td>
+                                <td>가격</td>
+                                <td>할인내역</td>
+                                <td>수량</td>
+                            </tr>
+                            <tr>
+                                <td><img src="../images/아몬드.jpg" alt="책 이미지" class="bookimg"></td>
+                                <td>아몽드</td>
+                                <td>12000원</td>
+                                <td>실버 등급할인 10%<br>1200원</td>
+                                <td>1권</td>
+                            </tr>
+                        </table>
+                    </div> <!--order_list-->
 
-                        <div class="payment_warp">
-                            <h3>결제수단 선택</h3>
-                            <div class="inner">
+                    <div class="Recipient_Info">
+                        <p class="menu_name">Recipient Info</p>
+                        <table>
+                            <tr>
+                                <td>주문인</td>
+                                <td><input type="text" id="name" placeholder="이름" required></td>
+                            </tr>
+                            <tr>
+                                <td>주소</td>
+                                <td>
+                                    <input type="text" id="address1" required>
+                                    <button>주소검색</button><br>
+                                    <input type="text" id="address2"required>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>휴대폰</td>
+                                <td>
+                                    <input type="tel" class="phone" placeholder="' - ' 제외하여 입력" required> 
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>요청사항</td>
+                                <td>
+                                    <div class="inner">
+                                        <div class="choice">
+                                            <input type="radio" id="request_01" required>
+                                            <label for="request_01">경비실</label>
+                                        </div>
+                                        <div class="choice">
+                                            <input type="radio" id="request_02" required>
+                                            <label for="request_02">문 앞</label>
+                                        </div>
+                                        <div class="choice">
+                                            <input type="radio"id="request_03" required>
+                                            <label for="request_03">무인 택배함</label>
+                                        </div>
+                                        <div class="choice">
+                                            <input type="radio" id="request_04" required>
+                                            <label for="request_04">직접 수령</label>
+                                        </div>
+                                        <div class="choice">
+                                            <input type="radio" id="request_05" required>
+                                            <label for="request_05">기타</label>
+                                            <input type="text" placeholder="" required>
+                                        </div>
+                                    </div>
+                                </td>
+                            </tr>
+                        </table>                       
+                    </div><!--Recipient_Info-->
 
-                                <div class="select_pay">
-                                    <ul>
-                                        <li>
-                                            <input type="radio" id="card" name="pay_choice">
-                                            <label for="card">신용카드</label>
-                                        </li>
-                                        <li>
-                                            <input type="radio" id="etc" name="pay_choice">
-                                            <label for="etc">다른결제수단</label>
-                                        </li>
-                                        <li class="other">
-                                            <input type="radio" id="kakao" class="kakao" name="pay_choice_01">
-                                            <img src="../images/ico_kakao.png" alt="">
-                                            <label for="kakao">카카오페이</label>
-                                            <input type="radio" id="naver" class="naver" name="pay_choice_01">
-                                            <img src="../images/ico_naver.png" alt="">
-                                            <label for="naver">네이버페이</label>
-                                        </li>
-                                    </ul>
-                                </div>
+                    <div class="payment_warp">
+                        <p class="menu_name">Payment info</p>
+                        <div class="inner">
 
-                                <div class="payment">
-                                    <ul>
-                                        <li>
-                                            <div class="price">
-                                                <dl>
-                                                    <dt>상품금액</dt>
-                                                    <dd><span class="pay_product">45,000</span>원</dd>
-                                                </dl>
-                                                <dl>
-                                                    <dt>배송비</dt>
-                                                    <dd><span class="pay_delivery">0</span>원</dd>
-                                                </dl>
-                                                <dl>
-                                                    <dt>할인금액</dt>
-                                                    <dd><span class="pay_discount">4,500</span>원</dd>
-                                                </dl>
-                                                <dl>
-                                                    <dt>나의 포인트 사용
-                                                        <input type="checkbox" class="pointChk">
-                                                    </dt>
-                                                    <dd><span class="pay_point">500</span>원</dd>
-                                                </dl>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="final">
-                                                <dl>
-                                                    <dt>최종 결제 금액</dt>
-                                                    <dd><span class="pay_total">40,500</span>원</dd>
-                                                </dl>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="agree">
-                                                <input type="checkbox" id="order_agree">
-                                                <label for="order_agree">주문내역확인 동의(필수)</label>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <button type="submit" class="btn_pay">결제하기</button>
-                                        </li>
-                                    </ul>
-                                </div>
+                            <div class="select_pay">
+                                <ul>
+                                    <li>
+                                        <input type="radio" id="card" name="pay_choice">
+                                        <label for="card">신용카드</label>
+                                    </li>
+                                    <li>
+                                        <input type="radio" id="etc" name="pay_choice">
+                                        <label for="etc">다른결제수단</label>
+                                    </li>
+                                    <li class="other">
+                                        <input type="radio" id="kakao" class="kakao" name="pay_choice_01">
+                                        <img src="../images/ico_kakao.png" alt="">
+                                        <label for="kakao">카카오페이</label>
+                                        <input type="radio" id="naver" class="naver" name="pay_choice_01">
+                                        <img src="../images/ico_naver.png" alt="">
+                                        <label for="naver">네이버페이</label>
+                                    </li>
+                                </ul>
+                            </div>
+
+                            <div class="payment">
+                                <ul>
+                                    <li>
+                                        <div class="price">
+                                            <dl>
+                                                <dt>상품금액</dt>
+                                                <dd><span class="pay_product">45,000</span>원</dd>
+                                            </dl>
+                                            <dl>
+                                                <dt>배송비</dt>
+                                                <dd><span class="pay_delivery">0</span>원</dd>
+                                            </dl>
+                                            <dl>
+                                                <dt>할인금액</dt>
+                                                <dd><span class="pay_discount">4,500</span>원</dd>
+                                            </dl>
+                                            <dl>
+                                                <dt>포인트 사용
+                                                    <input type="checkbox" class="pointChk">
+                                                </dt>
+                                                <dd><span class="pay_point">500</span>원</dd>
+                                            </dl>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="final">
+                                            <dl>
+                                                <dt>최종 결제 금액</dt>
+                                                <dd><span class="pay_total">40,500</span>원</dd>
+                                            </dl>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="agree">
+                                            <input type="checkbox" id="order_agree">
+                                            <label for="order_agree">주문내역확인 동의(필수)</label>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <button type="submit" class="btn_pay">결제하기</button>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
+                    </div>
                     </form>
                 </section>
                 
